--- a/templates/craft_sicherungWebsite/templates/kontakt/index.html
+++ b/templates/craft_sicherungWebsite/templates/kontakt/index.html
@@ -17,7 +17,7 @@
 
 <div class="container-fluid no-padding" style="background-color: white">
 
-<div class="container achterspaltenlayout" id="copy" style="padding-top: 2rem;">
+<div class="container achterspaltenlayout" id="info-head" style="padding-top: 2rem;">
 
   {% macro errorList(errors) %}
     {% if errors %}
