--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
@@ -8,7 +8,7 @@
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
 
-  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 
   <div class="container achterspaltenlayout" style="padding-top:0px;">
