--- a/templates/craft_sicherungWebsite/templates/kontakt/danke.html
+++ b/templates/craft_sicherungWebsite/templates/kontakt/danke.html
@@ -4,7 +4,7 @@
 {% block block1 %}
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
-  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
   <div class="container achterspaltenlayout text-center" style="padding-top:0px;">
     {% set entry = craft.entries.section('kontakt').slug('interessieren').one() %}
     <div style="padding-bottom:50px; ">
