--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/erfahrungsberichtlang.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/erfahrungsberichtlang.html
@@ -7,7 +7,7 @@
 
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
-<img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 <div class="container achterspaltenlayout" style="padding-bottom: 0;">
   <h1> {{ entry.title }} </h1>
