--- a/templates/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/themen.html
@@ -9,7 +9,7 @@
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 80px; position: relative;">
 
 
-  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999; padding-top: 100px;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999; padding-top: 100px;">
 
 
   <div class="container achterspaltenlayout" style="padding-top: 100px;">
