--- a/templates/craft_sicherungWebsite/templates/spenden/index.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/index.html
@@ -16,7 +16,7 @@
 
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 80px; position: relative;">
-  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
   <div class="container achterspaltenlayout">
     {% set entry = craft.entries.section('spenden').slug('spende').one() %}
       <h1 style="padding-bottom: 30px;"> {{ entry.title }} </h1>
