--- a/templates/craft_sicherungWebsite/templates/ueberUns/arbeitsweise.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/arbeitsweise.html
@@ -7,7 +7,7 @@
 
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
-<img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 <div class="container Achter-Spaltenlayout">
   <div style="padding-bottom:80px; ">
@@ -21,6 +21,14 @@
 <div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
 <div class="container zwoelferspaltenlayout" >
 
+  <style> /*Größe der Icons begrenzen*/
+  @media all and (max-width: 700px)  {
+    #arbeitsweiseIcons {
+      max-height: 100px;
+    }
+    }
+  </style>
+
   <div class="row">
   {% set entries = craft.entries.section('ueberUns').slug('arbeitsweise').one().children().all() %}
   {# If there are any entries, loop through them #}
@@ -28,12 +36,12 @@
       {% for entry in entries %}
       <div class="col-sm-1"></div>
       <div class="col-sm-2">
-        <img class="img-fluid rounded-circle" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
+        <img class="img-fluid rounded-circle" id="arbeitsweiseIcons" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0; margin-bottom: 1rem;">
       </div>
       <div class="col-sm-1"></div>
-      <div class="col-sm-8">
-        <h2>{{ entry.title }}</h2>
-        <div id="anleser"> {{ entry.anleser}} </div>
+      <div class="col-sm-8" style="padding-bottom: 2rem;">
+        <h2 style="padding-bottom: 1rem;">{{ entry.title }}</h2>
+        <div id="anleser" style="padding-bottom: .5rem;"> {{ entry.anleser}} </div>
         <div id="copy"> {{ entry.text }} </div>
       </div>
       {% endfor %}
@@ -64,7 +72,7 @@
   </div>
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 
-  <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
+  <div class="container zwoelferspaltenlayout" style="padding-top: 4rem;">
   <p id="anleser" class="text-center"> Erfahren Sie mehr über uns </p>
   </div>
 
