--- a/templates/craft_sicherungWebsite/templates/ueberUns/konzept.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/konzept.html
@@ -7,7 +7,7 @@
 
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
-<img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 <div class="container Achter-Spaltenlayout">
   <div style="padding-bottom:80px; ">
@@ -25,17 +25,26 @@
   <div class="row">
   {% set entries = craft.entries.section('ueberUns').slug('konzept').one().children().all() %}
 
+  <style> /*Größe der Icons begrenzen*/
+  @media all and (max-width: 700px)  {
+    #konzeptIcons {
+      max-height: 100px;
+    }
+    }
+  </style>
+
+
   {# If there are any entries, loop through them #}
   {% if entries | length %}
       {% for entry in entries %}
 
-      <div class="col-1"></div>
-      <div class="col-2">
-        <img class="img-fluid rounded-circle" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
+      <div class="col-sm-1"></div>
+      <div class="col-sm-2">
+        <img class="img-fluid rounded-circle" id="konzeptIcons" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0; margin-bottom: 1rem;">
       </div>
-      <div class="col-1"></div>
-      <div class="col-8">
-        <h2>{{ entry.title }}</h2>
+      <div class="col-sm-1"></div>
+      <div class="col-sm-8" style="padding-bottom: 2rem;">
+        <h2 style="padding-bottom: 1rem;">{{ entry.title }}</h2>
         <div id="anleser"> {{ entry.anleser}} </div>
         <div id="copy"> {{ entry.text }} </div>
 
